Add example of Java shebang script after install